2008-07-21 Added scikits.delaunay as matplotlib.delaunay.  Added griddata
           function in matplotlib.mlab, with example (griddata_demo.py) in
           pylab_examples. griddata function will use mpl_toolkits._natgrid 
           if installed (haven't yet created the toolkit).  - JSW

2008-07-21 Re-introduced offset_copy that works in the context of the
           new transforms. - MGD

2008-07-21 Committed patch by Ryan May to add get_offsets and
           set_offsets to Collections base class - EF

2008-07-21 Changed the "asarray" strategy in image.py so that
           colormapping of masked input should work for all
           image types (thanks Klaus Zimmerman) - EF

2008-07-20 Rewrote cbook.delete_masked_points and corresponding
           unit test to support rgb color array inputs, datetime
           inputs, etc. - EF

2008-07-20 Renamed unit/axes_unit.py to cbook_unit.py and modified
           in accord with Ryan's move of delete_masked_points from
           axes to cbook. - EF

2008-07-18 Check for nan and inf in axes.delete_masked_points().
           This should help hexbin and scatter deal with nans. - ADS

2008-07-17 Added ability to manually select contour label locations.
           Also added a waitforbuttonpress function. - DMK

2008-07-17 Fix bug with NaNs at end of path (thanks, Andrew Straw for
           the report) - MGD

2008-07-12 Added support for external backends with the
           "module://my_backend" syntax - JDH

2008-07-11 Fix memory leak related to shared axes.  Grouper should
           store weak references. - MGD

2008-07-10 Bugfix: crash displaying fontconfig pattern - MGD

2008-07-10 Bugfix: [ 2013963 ] update_datalim_bounds in Axes not works - MGD

2008-07-10 Bugfix: [ 2014183 ] multiple imshow() causes gray edges - MGD

2008-07-09 Fix rectangular axes patch on polar plots bug - MGD

2008-07-09 Improve mathtext radical rendering - MGD

2008-07-08 Improve mathtext superscript placement - MGD
